objects/PAMandCompetition__c.object
<CustomObject>
    <description>DECEMBER RELEASE - To associate a Product line to an Account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>December Release -  To associate an account to a product line.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PAM and Competitions</relationshipLabel>
        <relationshipName>PAMandCompetitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <description>December Release - Created to store Commercial Reference for a product.</description>
        <label>Commercial Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitionMarketShare__c</fullName>
        <description>December Release :- To store Market Share of all the competitors for the product line.</description>
        <label>Competition Market Share (%)</label>
        <summarizedField>ProductLineCompetitor__c.CompetitorMarketShare__c</summarizedField>
        <summaryForeignKey>ProductLineCompetitor__c.PLCID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>December Release :- To store Family of a product line.</description>
        <label>Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__c</fullName>
        <description>December Release :- To store currency of a product line.</description>
        <label>PAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductBU__c</fullName>
        <description>December Release :- To store Business Unit of a product line.</description>
        <label>Product BU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>December Release :- To store Material description of a product line.</description>
        <label>Material Descripton</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>December Release :- To store Family of a product line.</description>
        <label>Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>December Release :- To store Product Line value for PAM and Competition object.</description>
        <label>Product Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>December Release :- To store Reference(product) of a product line.</description>
        <label>System ID/Reference</label>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipLabel>PAM and Competitions</relationshipLabel>
        <relationshipName>PAM_and_Competitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchneiderMarketShare__c</fullName>
        <description>December Release :- To store market share of a product line.</description>
        <label>Schneider Market Share (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TECH_2014ReferentialUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_2014ReferentialUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarningMessage__c</fullName>
        <description>DECEMBER RELEASE - To display a warning when the total of “Schneider Market Share” + “Competition Market Share” is not equal to 100%.</description>
        <formula>if( SchneiderMarketShare__c  + CompetitionMarketShare__c &lt;&gt; 1,IMAGE(&quot;/resource/STR030_WarningMessagePAM&quot;,&quot;PAM and Competitors&quot;,35,350)
,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <description>December Release :- To associate Year to a product line.</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PAM and Competition</label>
    <nameField>
        <displayFormat>PAM-{YY}{MM}-{0000}</displayFormat>
        <label>PAM and Competition Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAM and Competitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PAC_VR01_TotalMarketShare</fullName>
        <active>true</active>
        <description>DECEMBER RELEASE - To validate that the sum of Competitior and Schneider Market Share Should not exceed 100%.</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) ,(CompetitionMarketShare__c + SchneiderMarketShare__c &gt;1))</errorConditionFormula>
        <errorDisplayField>SchneiderMarketShare__c</errorDisplayField>
        <errorMessage>Sum of Competitior and Schneider Market Share Should not exceed 100%.</errorMessage>
    </validationRules>
</CustomObject>